npm --scope=rubik -w @rubik/core init -y

--- a/@rubik/core/package.json
+++ b/@rubik/core/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "rubik",
+  "name": "@rubik/core",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "workspaces": [
-    "./vite-project/",
-    "@rubik/core"
-  ],
   "keywords": [],
   "author": "",
   "license": "ISC"
