--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   ],
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@tsconfig/node22": "^22.0.0",
+    "@tsconfig/strictest": "^2.0.5",
+    "typescript": "^5.6.2"
+  }
 }
